--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,26 @@ main {
     box-shadow: 2px 2px rgba(30, 30, 41, 1);
 }
 
-#sign-out {
+.signed-in-small {
+    text-align: left;
+    position: absolute;
+    bottom: 9%;
+    right: 2%;
+    background-color: rgba(30, 30, 41, 1);
+    border: rgba(30, 30, 41, 1);
+    width: 250px;
+    height: 200px;
+    border-radius: 6px;
+    color: rgba(229,231,235,1);
+    box-shadow: 2px 2px rgba(30, 30, 41, 1);
+    transition: ease;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+#sign-out, #sign-out_small {
     padding-top: 10px;
     width: 100%;
     padding-left: 5px;
@@ -412,7 +431,7 @@ main {
     text-align: left;
 }
 
-#sign-out:hover {
+#sign-out:hover, #sign-out_small:hover {
     background-color: rgba(52,51,67,1);
 }
 
@@ -439,8 +458,11 @@ main {
 
 #dash-account {
     color: rgba(255, 255, 255, 0.5);
-    cursor: pointer;
     text-decoration: none;
+}
+
+#account {
+    cursor: pointer;
 }
 
 #dash-account:hover {
@@ -634,6 +656,10 @@ background: rgb(61, 60, 100);
         visibility: hidden;
     }
 
+    .signed-in-small {
+        display: none;
+    }
+
     .visibility {
         visibility: visible;
     }
@@ -660,6 +686,8 @@ background: rgb(61, 60, 100);
     .signed-in {
         display: none;
     }
+
+
 
     .radio-hold {
         width: 90%;
@@ -692,6 +720,11 @@ background: rgb(61, 60, 100);
         grid-column-gap: 10px;
         grid-row-gap: 20px;
     }
+
+    .signed-in-small {
+        width: 200px;
+     }
+
 }
 
 @media screen and (max-width:430px) {
